# ai-radar

.github/workflows/: daily-briefing.yml
ai-radar/: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
ai-radar/docs/: index.html
ai-radar/docs/css/: style.css
ai-radar/docs/js/: app.js  components.js
ai-radar/pipeline/: __init__.py  config.py  main.py  models.py
ai-radar/pipeline/output/: __init__.py  email_digest.py  json_writer.py
ai-radar/pipeline/processing/: __init__.py  ai_summarizer.py  dedup.py  relevance.py
ai-radar/pipeline/sources/: __init__.py  arxiv.py  hackernews.py  rss.py
ai-radar/templates/: digest.html
ai-radar/tests/: __init__.py  conftest.py  test_models.py  test_output.py  test_pipeline.py  test_processing.py  test_sources.py
