[project]
name = "ai-radar"
version = "0.1.0"
description = "Auto-curated AI intelligence dashboard — daily briefings from top AI sources"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "anthropic>=0.40.0",
    "feedparser>=6.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "resend>=2.0.0",
    "jinja2>=3.1.0",
]

[tool.setuptools.packages.find]
include = ["pipeline*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "SIM"]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]
